Various components mockup

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -111,3 +111,7 @@ body .wrapper {
   color: #ffffff !important;
   text-decoration: none !important;
 }
+#trainingContainer .content .tabular-list,
+#trainingContainer .content .accordion-list {
+  padding: 11px 0;
+}
