--- a/public/less/training.less
+++ b/public/less/training.less
@@ -17,6 +17,11 @@
                 }
             }
         }
+
+        // Other list components
+        .tabular-list, .accordion-list {
+            padding: 11px 0;
+        }
     }
     
 }
