--- a/rasacore/templates/rasacore/index.html
+++ b/rasacore/templates/rasacore/index.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block extra_style %}
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid" id="trainingContainer">
     <div class="row full-height">
@@ -42,7 +46,42 @@
         <div class="col-md-4 full-height neutral-bg">
             <div class="content">
                 <h4>User says examples</h4>
-                
+                <div class="tabular-list">
+                    <table class="table table-bordered table-condensed table-hover">
+                        <tbody>
+                            <tr>
+                                <td class="col-md-11">
+                                    <input type="text" placeholder="User example text" class="form-control input-sm">
+                                </td>
+                                <td>
+                                    <button class="btn btn-neutral btn-sm">
+                                        <i class="fa fa-plus"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-11">
+                                    <input type="text" placeholder="User example text" class="form-control input-sm">
+                                </td>
+                                <td>
+                                    <button class="btn btn-neutral btn-sm">
+                                        <i class="fa fa-plus"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-11">
+                                    <input type="text" placeholder="User example text" class="form-control input-sm">
+                                </td>
+                                <td>
+                                    <button class="btn btn-neutral btn-sm">
+                                        <i class="fa fa-plus"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
 
@@ -50,7 +89,39 @@
         <div class="col-md-4 full-height">
             <div class="content">
                 <h4>Bot responses and actions</h4>
-                
+                <div class="accordion-list">
+                    <div id="actionsList">
+                        <div class="group">
+                            <h3>Action 1</h3>
+                            <div>
+                            <p>Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.</p>
+                            </div>
+                        </div>
+                        <div class="group">
+                            <h3>Action 2</h3>
+                            <div>
+                            <p>Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In suscipit faucibus urna. </p>
+                            </div>
+                        </div>
+                        <div class="group">
+                            <h3>Action 3</h3>
+                            <div>
+                            <p>Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis. Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui. </p>
+                            <ul>
+                                <li>List item one</li>
+                                <li>List item two</li>
+                                <li>List item three</li>
+                            </ul>
+                            </div>
+                        </div>
+                        <div class="group">
+                            <h3>Action 4</h3>
+                            <div>
+                            <p>Cras dictum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia mauris vel est. </p><p>Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -59,5 +130,25 @@
 {% endblock %}
 
 {% block extra_scripts %}
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+    $( function() {
+        $( "#actionsList" )
+        .accordion({
+            header: "> div > h3"
+        })
+        .sortable({
+            axis: "y",
+            handle: "h3",
+            stop: function( event, ui ) {
+            // IE doesn't register the blur when sorting
+            // so trigger focusout handlers to remove .ui-state-focus
+            ui.item.children( "h3" ).triggerHandler( "focusout" );
 
+            // Refresh accordion to handle new order
+            $( this ).accordion( "refresh" );
+            }
+        });
+    } );
+    </script>
 {% endblock %}
