Various components mockup

--- a/rasacore/templates/rasacore/index.html
+++ b/rasacore/templates/rasacore/index.html
@@ -10,9 +10,15 @@
 <div class="container-fluid" id="trainingContainer">
     <div class="row full-height">
         <!-- Story list -->
-        <div class="col-md-2 full-height secondary-bg">
+        <div class="col-md-2 full-height primary-bg">
             <div class="content">
-                <h4>Stories</h4>
+                <h4>Stories
+                    <span class="action">
+                        <button class="btn btn-primary btn-xs">
+                            <i class="fa fa-plus-circle"></i> Add story
+                        </button>
+                    </span>
+                </h4>
                 <ul class="list-unstyled component-list">
                     <li>
                         <a href="javascript:;">Order food</a>
@@ -30,7 +36,13 @@
         <!-- Intents list -->
         <div class="col-md-2 full-height action-bg">
             <div class="content">
-                <h4>Intents</h4>
+                <h4>Intents
+                    <span class="action">
+                        <button class="btn btn-primary btn-xs">
+                            <i class="fa fa-plus-circle"></i> Add intent
+                        </button>
+                    </span>
+                </h4>
                 <ul class="list-unstyled component-list">
                     <li>
                         <a href="javascript:;">make_order</a>
@@ -45,7 +57,13 @@
         <!-- User says -->
         <div class="col-md-4 full-height neutral-bg">
             <div class="content">
-                <h4>User says examples</h4>
+                <h4>User says examples
+                    <span class="action">
+                        <button class="btn btn-primary btn-xs">
+                            <i class="fa fa-plus-circle"></i> Add example
+                        </button>
+                    </span>
+                </h4>
                 <div class="tabular-list">
                     <table class="table table-bordered table-condensed table-hover">
                         <tbody>
@@ -88,7 +106,13 @@
         <!-- Actions -->
         <div class="col-md-4 full-height">
             <div class="content">
-                <h4>Bot responses and actions</h4>
+                <h4>Bot responses and actions
+                    <span class="action">
+                        <button class="btn btn-primary btn-xs">
+                            <i class="fa fa-plus-circle"></i> Add action
+                        </button>
+                    </span>
+                </h4>
                 <div class="accordion-list">
                     <div id="actionsList">
                         <div class="group">
