--- a/public/css/app.css
+++ b/public/css/app.css
@@ -94,12 +94,12 @@ body .wrapper {
 }
 #trainingContainer .content .component-list li:hover,
 #trainingContainer .content .component-list li:focus {
-  background: #000100 !important;
-  color: #F8F8F8 !important;
+  background: #A1A6B4 !important;
+  color: #000100 !important;
 }
 #trainingContainer .content .component-list li:hover a,
 #trainingContainer .content .component-list li:focus a {
-  color: #F8F8F8 !important;
+  color: #000100 !important;
   text-decoration: none !important;
 }
 #trainingContainer .content .component-list li:hover a:hover,
@@ -108,10 +108,13 @@ body .wrapper {
 #trainingContainer .content .component-list li:focus a:active,
 #trainingContainer .content .component-list li:hover a:focus,
 #trainingContainer .content .component-list li:focus a:focus {
-  color: #ffffff !important;
+  color: #001000 !important;
   text-decoration: none !important;
 }
 #trainingContainer .content .tabular-list,
 #trainingContainer .content .accordion-list {
   padding: 11px 0;
+}
+#trainingContainer .content h4 .action {
+  float: right;
 }
