--- a/public/less/training.less
+++ b/public/less/training.less
@@ -13,7 +13,7 @@
             li {
                 padding: 11px 0;
                 &:hover, &:focus {
-                    .primary-bg;
+                    .secondary-bg;
                 }
             }
         }
@@ -21,6 +21,12 @@
         // Other list components
         .tabular-list, .accordion-list {
             padding: 11px 0;
+        }
+
+        h4 {
+            .action {
+                float: right;
+            }
         }
     }
     
