User says list component

--- a/rasacore/templates/rasacore/index.html
+++ b/rasacore/templates/rasacore/index.html
@@ -48,42 +48,8 @@
                         </button>
                     </span>
                 </h4>
-                <div class="tabular-list">
-                    <table class="table table-bordered table-condensed table-hover">
-                        <tbody>
-                            <tr>
-                                <td class="col-md-11">
-                                    <input type="text" placeholder="User example text" class="form-control input-sm">
-                                </td>
-                                <td>
-                                    <button class="btn btn-neutral btn-sm">
-                                        <i class="fa fa-plus"></i>
-                                    </button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-11">
-                                    <input type="text" placeholder="User example text" class="form-control input-sm">
-                                </td>
-                                <td>
-                                    <button class="btn btn-neutral btn-sm">
-                                        <i class="fa fa-plus"></i>
-                                    </button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="col-md-11">
-                                    <input type="text" placeholder="User example text" class="form-control input-sm">
-                                </td>
-                                <td>
-                                    <button class="btn btn-neutral btn-sm">
-                                        <i class="fa fa-plus"></i>
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+                
+                <user-says></user-says>
             </div>
         </div>
 
@@ -161,7 +127,8 @@
     </script>
     
     <!-- Add app scripts -->
-    <script src="{% static 'js/rasacore/intent-details.js' %}"></script>
+    <script src="{% static 'js/rasacore/bot-response.js' %}"></script>
+    <script src="{% static 'js/rasacore/user-says.js' %}"></script>
     <script src="{% static 'js/rasacore/intents.js' %}"></script>
     <script src="{% static 'js/rasacore/stories.js' %}"></script>
     <script src="{% static 'js/rasacore/training.js' %}"></script>
