--- a/public/less/context.less
+++ b/public/less/context.less
@@ -1,7 +1,12 @@
 html, body {
     height: 100%;
-
+    
     .wrapper {
         height: 100%;
+    }
+
+    // Utilites
+    [v-cloak] { 
+        display:none; 
     }
 }
