--- a/rasacore/templates/rasacore/index.html
+++ b/rasacore/templates/rasacore/index.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 {% verbatim %}
-<div class="container-fluid" id="trainingContainer">
+<div class="container-fluid" id="trainingContainer" v-cloak>
     <div class="row full-height">
         <!-- Story list -->
         <div class="col-md-2 full-height primary-bg">
@@ -20,12 +20,12 @@
                         </button>
                     </span>
                 </h4>
-                <story-list :stories="stories" :activestory.sync="active_story"></story-list>
+                <story-list :stories="stories" :story.sync="story"></story-list>
             </div>
         </div>
 
         <!-- Intents list -->
-        <div class="col-md-2 full-height action-bg" id="intentsList">
+        <div class="col-md-2 full-height action-bg" id="intentsList" v-show="story">
             <div class="content">
                 <h4>Intents
                     <span class="action">
@@ -34,12 +34,12 @@
                         </button>
                     </span>
                 </h4>
-                <intents-list :story="active_story"></intents-list>
+                <intents-list :story="story" :intent.sync="intent"></intents-list>
             </div>
         </div>
 
         <!-- User says -->
-        <div class="col-md-4 full-height neutral-bg">
+        <div class="col-md-4 full-height neutral-bg" v-show="story && intent">
             <div class="content">
                 <h4>User says examples
                     <span class="action">
@@ -48,13 +48,13 @@
                         </button>
                     </span>
                 </h4>
-                
-                <user-says></user-says>
+
+                <user-says :intent="intent"></user-says>
             </div>
         </div>
 
         <!-- Actions -->
-        <div class="col-md-4 full-height">
+        <div class="col-md-4 full-height" v-show="story && intent">
             <div class="content">
                 <h4>Bot responses and actions
                     <span class="action">
@@ -64,37 +64,7 @@
                     </span>
                 </h4>
                 <div class="accordion-list">
-                    <div id="actionsList">
-                        <div class="group">
-                            <h3>Action 1</h3>
-                            <div>
-                            <p>Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.</p>
-                            </div>
-                        </div>
-                        <div class="group">
-                            <h3>Action 2</h3>
-                            <div>
-                            <p>Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In suscipit faucibus urna. </p>
-                            </div>
-                        </div>
-                        <div class="group">
-                            <h3>Action 3</h3>
-                            <div>
-                            <p>Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis. Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui. </p>
-                            <ul>
-                                <li>List item one</li>
-                                <li>List item two</li>
-                                <li>List item three</li>
-                            </ul>
-                            </div>
-                        </div>
-                        <div class="group">
-                            <h3>Action 4</h3>
-                            <div>
-                            <p>Cras dictum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia mauris vel est. </p><p>Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
-                            </div>
-                        </div>
-                    </div>
+                    <actions-list :intent="intent"></actions-list>
                 </div>
             </div>
         </div>
@@ -105,31 +75,11 @@
 
 {% block extra_scripts %}
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
-    $( function() {
-        $( "#actionsList" )
-        .accordion({
-            header: "> div > h3"
-        })
-        .sortable({
-            axis: "y",
-            handle: "h3",
-            stop: function( event, ui ) {
-            // IE doesn't register the blur when sorting
-            // so trigger focusout handlers to remove .ui-state-focus
-            ui.item.children( "h3" ).triggerHandler( "focusout" );
-
-            // Refresh accordion to handle new order
-            $( this ).accordion( "refresh" );
-            }
-        });
-    } );
-    </script>
     
-    <!-- Add app scripts -->
-    <script src="{% static 'js/rasacore/bot-response.js' %}"></script>
-    <script src="{% static 'js/rasacore/user-says.js' %}"></script>
-    <script src="{% static 'js/rasacore/intents.js' %}"></script>
-    <script src="{% static 'js/rasacore/stories.js' %}"></script>
-    <script src="{% static 'js/rasacore/training.js' %}"></script>
+<!-- Add app scripts -->
+<script src="{% static 'js/rasacore/intent-actions.js' %}"></script>
+<script src="{% static 'js/rasacore/user-says.js' %}"></script>
+<script src="{% static 'js/rasacore/intents.js' %}"></script>
+<script src="{% static 'js/rasacore/stories.js' %}"></script>
+<script src="{% static 'js/rasacore/training.js' %}"></script>
 {% endblock %}
