--- a/public/less/training.less
+++ b/public/less/training.less
@@ -15,6 +15,9 @@
                 &:hover, &:focus {
                     .secondary-bg;
                 }
+                &.active {
+                    .secondary-bg;
+                }
             }
         }
 
