--- a/public/less/training.less
+++ b/public/less/training.less
@@ -8,15 +8,16 @@
     .content {
         padding: 21px 0;
         .component-list {
-            width: 100%;
             padding: 0px !important;
+            margin-left: -15px;
+            margin-right: -15px;
             li {
-                padding: 11px 0;
+                padding: 11px 15px;
                 &:hover, &:focus {
-                    .secondary-bg;
+                    .neutral-bg;
                 }
                 &.active {
-                    .secondary-bg;
+                    .neutral-bg;
                 }
             }
         }
