Added user notification

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
 
     <!-- Other Plugins -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
+    <script src="https://cdn.rawgit.com/notifyjs/notifyjs/master/dist/notify.js"></script>
 
     <!-- Main script -->
     <script src="{% static 'js/app.js' %}"></script>
